fix firestore list relantionships
